--- a/Notebook_Projet_métabo_partie2.ipynb
+++ b/Notebook_Projet_métabo_partie2.ipynb
@@ -1570,7 +1570,7 @@
    "id": "ab922fe3-8133-4d6c-b720-f4742bea8e0d",
    "metadata": {},
    "source": [
-    "![glycolysis flux mapping](glycolysis_flux_mapping.png)"
+    "![glycolysis flux mapping](results/glycolysis_flux_mapping.png)"
    ]
   },
   {
@@ -1969,7 +1969,7 @@
     "-UDP_D_Xylose_and_UDP_D_glucuronate_biosynthesis  \n",
     "\n",
     "#### Représentation graphique des voies métaboliques\n",
-    "![Mapping des gènes essentiels de Ralstonia solanacearum](mapping_genes_essentiels.jpg)\n",
+    "![Mapping des gènes essentiels de Ralstonia solanacearum](results/mapping_genes_essentiels.jpg)\n",
     "\n",
     "Le graphique présente les voies métaboliques contenant les gènes essentiels mappés, en comparant pour chaque voie le nombre total de gènes associés et le nombre de gènes essentiels mappés. Les voies sont ordonnées par significativité décroissante selon la p-value ajustée (Benjamini–Hochberg).\n",
     "\n",
