Fix typo in objective function comment

--- a/Notebook_Projet_métabo_partie2.ipynb
+++ b/Notebook_Projet_métabo_partie2.ipynb
@@ -668,7 +668,7 @@
     }
    ],
    "source": [
-    "# Définition de la réaction BIOMASS comme fonction objective\n",
+    "# Définition de la réaction BIOMASS comme fonction objectif\n",
     "model.objective = biomass_rxn\n",
     "model.objective"
    ]
